--- a/client/src/components/TodoList.css
+++ b/client/src/components/TodoList.css
@@ -1,7 +1,9 @@
 .todoList {
   display: flex;
+  flex-direction: column;
   background-color: white;
   border-radius: 10px;
+  padding: 10px;
 }
 
 button {
@@ -10,13 +12,14 @@ button {
   cursor: pointer;
   border-radius: 10px;
   padding: 10px;
-  width: 15%;
+  background-color: rgb(231, 231, 231);
 }
 
 .todos {
-  width: 50%;
   font-size: 2em;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 10px 10px 10px 40px;
+  border: solid 1px lightgrey;
+  margin: 10px;
 }
