--- a/client/src/components/TodoList.css
+++ b/client/src/components/TodoList.css
@@ -1,9 +1,10 @@
 .todoList {
   display: flex;
   flex-direction: column;
-  background-color: white;
-  border-radius: 10px;
-  padding: 10px;
+  background-color: rgb(233, 233, 233);
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
 }
 
 button {
@@ -12,7 +13,6 @@ button {
   cursor: pointer;
   border-radius: 10px;
   padding: 10px;
-  background-color: rgb(231, 231, 231);
 }
 
 .todos {
@@ -22,4 +22,18 @@ button {
   padding: 10px 10px 10px 40px;
   border: solid 1px lightgrey;
   margin: 10px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.openModalButton {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1em;
 }
