--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,4 +3,5 @@ body {
   padding: 0;
   box-sizing: border-box;
   background-color: rgb(233, 233, 233);
+  font-family: "Montserrat", "sant-serif";
 }
